welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value int
  int T = nums.length
  ^arrayFront9:3: error: not found: value T
  if(T<4){
     ^arrayFront9:4: error: not found: value T
    T=4
    ^arrayFront9:6: error: not found: value T
  for (i <- 0 to T){
                 ^